# Mygamelist

./: README.md  estructura.txt  mgl.db  pyproject.toml  pyvenv.cfg
ElJueguitos/: README.md  mgl.db
ElJueguitos/docs/mgl/: infra.html
ElJueguitos/src/: create_tables.py  mgl.db
ElJueguitos/src/mgl/: README-admin.txt
ElJueguitos/src/mygamelist.egg-info/: PKG-INFO
ElJueguitos/templates/: base.html  home.html
ElJueguitos/tests/: conftest.py  test_repos_filters.py
Mygamelist-main/: mgl.db
Mygamelist-main/mygamelist/: README.md  mgl.db
Mygamelist-main/mygamelist/docs/: index.html  mgl.html  search.js
Mygamelist-main/mygamelist/src/: add_games.py
Mygamelist-main/mygamelist/templates/: admin.html  base.html  detail.html  home.html  login.html  register.html
Mygamelist-main/mygamelist/tests/: test_api_favoritos.py
Scripts/: activate  activate.bat  activate.fish
data/seed/: games.csv
docs/mgl/: api.html  services.html
mygamelist/: README.md  mgl.db
mygamelist/docs/mgl/: domain.html  repos.html
mygamelist/src/mgl/: cli.py
mygamelist/src/mygamelist.egg-info/: PKG-INFO  SOURCES.txt
mygamelist/templates/: base.html  home.html  results.html
mygamelist/tests/: test_api_favoritos.py  test_repos_filters.py  test_repos_juegos.py
src/data/: app.db
src/mgl/: cli.py  mgl.db
src/mgl/api/: __init__.py  main.py  routes.py
src/mgl/infra/: auth.py  database.py  db.py
src/mygamelist.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: styles.css
templates/: login.html  register.html
tests/: test_search.py
(+56 files in other folders)
