[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mygamelist"
version = "0.1.0"
description = "MyGameList - PRAC2 MVP in Python (FastAPI + SQLModel + Typer)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sqlmodel>=0.0.22",
  "pydantic>=2.8.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
  "black>=24.8.0",
  "pdoc>=15.0.0",
  "sphinx>=8.0.0"
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E","F","I","B"]
ignore = ["E203","E266","E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
